deploy: d2c4340410f266747bc5c1d962d4f428aa765581

--- a/00-main.css
+++ b/00-main.css
@@ -223,6 +223,7 @@ pre.listings{font-family: monospace,monospace; white-space: pre-wrap; margin-top
 pre.lstlisting{font-family: monospace,monospace; white-space: pre-wrap; margin-top:0.5em; margin-bottom:0.5em; text-align: left; }
 pre.lstinputlisting{ font-family: monospace,monospace; white-space: pre-wrap; text-align: left; }
 .lstinputlisting .label{margin-right:0.5em;}
+ /* global colours */ body { background:#ffffff; color:#000000; margin:1em auto; max-width:52em; colorscheme: light; } a { color:#0645ad; } /* GitHub-like link blue */ nav.crosslinks { font-size:.9em; text-align:center; margin:1em 0; } nav.crosslinks a { margin:0 .5em; text-decoration:none; } 
 img { max-width: 100%; height: auto; }
 #tcolobox-1 .tcolorbox-title{color: #FFFFFF; background-color: #404040;}
 #tcolobox-1 .tcolorbox-content{color: #000000; background-color: #F2F2F2; border: 1px solid #404040;}
@@ -323,5 +324,23 @@ img { max-width: 100%; height: auto; }
 #textcolor32{color:#FF8000}
 #textcolor33{color:#00FF00}
 #textcolor34{color:#FF0000}
+#tcolobox-23 .tcolorbox-title{color: #FFFFFF; background-color: #404040;}
+#tcolobox-23 .tcolorbox-content{color: #000000; background-color: #F2F2F2; border: 1px solid #404040;}
+#tcolobox-23 div{ padding-top:8.5358px; padding-bottom:8.5358px; padding-left:14.22635px; padding-right:14.22635px; }
+#tcolobox-24 .tcolorbox-title{color: #FFFFFF; background-color: #404040;}
+#tcolobox-24 .tcolorbox-content{color: #000000; background-color: #F2F2F2; border: 1px solid #404040;}
+#tcolobox-24 div{ padding-top:8.5358px; padding-bottom:8.5358px; padding-left:14.22635px; padding-right:14.22635px; }
+#tcolobox-25 .tcolorbox-title{color: #FFFFFF; background-color: #404040;}
+#tcolobox-25 .tcolorbox-content{color: #000000; background-color: #F2F2F2; border: 1px solid #404040;}
+#tcolobox-25 div{ padding-top:8.5358px; padding-bottom:8.5358px; padding-left:14.22635px; padding-right:14.22635px; }
+#tcolobox-26 .tcolorbox-title{color: #FFFFFF; background-color: #404040;}
+#tcolobox-26 .tcolorbox-content{color: #000000; background-color: #F2F2F2; border: 1px solid #404040;}
+#tcolobox-26 div{ padding-top:8.5358px; padding-bottom:8.5358px; padding-left:14.22635px; padding-right:14.22635px; }
+#tcolobox-27 .tcolorbox-title{color: #FFFFFF; background-color: #404040;}
+#tcolobox-27 .tcolorbox-content{color: #000000; background-color: #F2F2F2; border: 1px solid #404040;}
+#tcolobox-27 div{ padding-top:8.5358px; padding-bottom:8.5358px; padding-left:14.22635px; padding-right:14.22635px; }
+#tcolobox-28 .tcolorbox-title{color: #FFFFFF; background-color: #404040;}
+#tcolobox-28 .tcolorbox-content{color: #000000; background-color: #F2F2F2; border: 1px solid #404040;}
+#tcolobox-28 div{ padding-top:8.5358px; padding-bottom:8.5358px; padding-left:14.22635px; padding-right:14.22635px; }
 /* end css.sty */
 
