--- a/00-main.css
+++ b/00-main.css
@@ -220,6 +220,7 @@ pre.listings{font-family: monospace,monospace; white-space: pre-wrap; margin-top
 pre.lstlisting{font-family: monospace,monospace; white-space: pre-wrap; margin-top:0.5em; margin-bottom:0.5em; text-align: left; }
 pre.lstinputlisting{ font-family: monospace,monospace; white-space: pre-wrap; text-align: left; }
 .lstinputlisting .label{margin-right:0.5em;}
+ /* global colours */ body { background:#ffffff; color:#000000; margin:1em auto; max-width:52em; colorscheme: light; } a { color:#0645ad; } /* GitHub-like link blue */ nav.crosslinks { font-size:.9em; text-align:center; margin:1em 0; } nav.crosslinks a { margin:0 .5em; text-decoration:none; } 
 img { max-width: 100%; height: auto; }
 #tcolobox-1 .tcolorbox-title{color: #FFFFFF; background-color: #404040;}
 #tcolobox-1 .tcolorbox-content{color: #000000; background-color: #F2F2F2; border: 1px solid #404040;}
