--- a/00-main.css
+++ b/00-main.css
@@ -18,6 +18,7 @@
 .msbm-10x-x-109{}
 .msbm-10x-x-80{font-size:72%;}
 .msbm-7x-x-85{font-size:54%;}
+.vect10-x-x-109{}
 .rm-lmr-10x-x-109{}
 .rm-lmr-8{font-size:72%;}
 .rm-lmr-6{font-size:54%;}
@@ -39,6 +40,7 @@
 .rm-lmri-10x-x-109{ font-style:italic;}
 .rm-lmss-10x-x-109{ font-family: sans-serif;}
 .rm-lmssbx-10x-x-109{ font-family: sans-serif; font-weight: bold;}
+.rm-lmri-8{font-size:72%; font-style:italic;}
 p{margin-top:0;margin-bottom:0}
 p.indent{text-indent:0;}
 p + p{margin-top:1em;}
@@ -293,5 +295,169 @@ img { max-width: 100%; height: auto; }
 #tcolobox-22 .tcolorbox-title{color: #FFFFFF; background-color: #404040;}
 #tcolobox-22 .tcolorbox-content{color: #000000; background-color: #F2F2F2; border: 1px solid #404040;}
 #tcolobox-22 div{ padding-top:8.5358px; padding-bottom:8.5358px; padding-left:14.22635px; padding-right:14.22635px; }
+#tcolobox-23 .tcolorbox-title{color: #FFFFFF; background-color: #404040;}
+#tcolobox-23 .tcolorbox-content{color: #000000; background-color: #F2F2F2; border: 1px solid #404040;}
+#tcolobox-23 div{ padding-top:8.5358px; padding-bottom:8.5358px; padding-left:14.22635px; padding-right:14.22635px; }
+.columns-2 :first-child { margin-top: 0em; }
+.columns-2{-moz-column-count:2; -webkit-column-count:2; column-count:2; -moz-column-gap: 10.0pt; -webkit-column-gap: 10.0pt; column-gap: 10.0pt; -moz-column-rule-width: 0.0pt; -webkit-column-rule-width: 0.0pt; column-rule-rule-width: 0.0pt; -moz-column-rule-color: #555; -webkit-column-rule-color: #555; column-rule-color: #555; -moz-column-rule-style: outset; -webkit-column-rule-style: outset; column-rule-style: outset; -moz-column-fill: balance; -webkit-column-fill: balance; column-fill: balance; }
+#tcolobox-24 .tcolorbox-title{color: #FFFFFF; background-color: #404040;}
+#tcolobox-24 .tcolorbox-content{color: #000000; background-color: #F2F2F2; border: 1px solid #404040;}
+#tcolobox-24 div{ padding-top:8.5358px; padding-bottom:8.5358px; padding-left:14.22635px; padding-right:14.22635px; }
+#tcolobox-25 .tcolorbox-title{color: #FFFFFF; background-color: #404040;}
+#tcolobox-25 .tcolorbox-content{color: #000000; background-color: #F2F2F2; border: 1px solid #404040;}
+#tcolobox-25 div{ padding-top:8.5358px; padding-bottom:8.5358px; padding-left:14.22635px; padding-right:14.22635px; }
+#tcolobox-26 .tcolorbox-title{color: #FFFFFF; background-color: #404040;}
+#tcolobox-26 .tcolorbox-content{color: #000000; background-color: #F2F2F2; border: 1px solid #404040;}
+#tcolobox-26 div{ padding-top:8.5358px; padding-bottom:8.5358px; padding-left:14.22635px; padding-right:14.22635px; }
+#tcolobox-27 .tcolorbox-title{color: #FFFFFF; background-color: #404040;}
+#tcolobox-27 .tcolorbox-content{color: #000000; background-color: #F2F2F2; border: 1px solid #404040;}
+#tcolobox-27 div{ padding-top:8.5358px; padding-bottom:8.5358px; padding-left:14.22635px; padding-right:14.22635px; }
+#tcolobox-28 .tcolorbox-title{color: #FFFFFF; background-color: #404040;}
+#tcolobox-28 .tcolorbox-content{color: #000000; background-color: #F2F2F2; border: 1px solid #404040;}
+#tcolobox-28 div{ padding-top:8.5358px; padding-bottom:8.5358px; padding-left:14.22635px; padding-right:14.22635px; }
+#tcolobox-29 .tcolorbox-title{color: #FFFFFF; background-color: #404040;}
+#tcolobox-29 .tcolorbox-content{color: #000000; background-color: #F2F2F2; border: 1px solid #404040;}
+#tcolobox-29 div{ padding-top:8.5358px; padding-bottom:8.5358px; padding-left:14.22635px; padding-right:14.22635px; }
+#textcolor5{color:#FF0000}
+#tcolobox-30 .tcolorbox-title{color: #FFFFFF; background-color: #404040;}
+#tcolobox-30 .tcolorbox-content{color: #000000; background-color: #F2F2F2; border: 1px solid #404040;}
+#tcolobox-30 div{ padding-top:8.5358px; padding-bottom:8.5358px; padding-left:14.22635px; padding-right:14.22635px; }
+#tcolobox-31 .tcolorbox-title{color: #FFFFFF; background-color: #404040;}
+#tcolobox-31 .tcolorbox-content{color: #000000; background-color: #F2F2F2; border: 1px solid #404040;}
+#tcolobox-31 div{ padding-top:8.5358px; padding-bottom:8.5358px; padding-left:14.22635px; padding-right:14.22635px; }
+#tcolobox-32 .tcolorbox-title{color: #FFFFFF; background-color: #404040;}
+#tcolobox-32 .tcolorbox-content{color: #000000; background-color: #F2F2F2; border: 1px solid #404040;}
+#tcolobox-32 div{ padding-top:8.5358px; padding-bottom:8.5358px; padding-left:14.22635px; padding-right:14.22635px; }
+#tcolobox-33 .tcolorbox-title{color: #FFFFFF; background-color: #404040;}
+#tcolobox-33 .tcolorbox-content{color: #000000; background-color: #F2F2F2; border: 1px solid #404040;}
+#tcolobox-33 div{ padding-top:8.5358px; padding-bottom:8.5358px; padding-left:14.22635px; padding-right:14.22635px; }
+#tcolobox-34 .tcolorbox-title{color: #FFFFFF; background-color: #404040;}
+#tcolobox-34 .tcolorbox-content{color: #000000; background-color: #F2F2F2; border: 1px solid #404040;}
+#tcolobox-34 div{ padding-top:8.5358px; padding-bottom:8.5358px; padding-left:14.22635px; padding-right:14.22635px; }
+#tcolobox-35 .tcolorbox-title{color: #FFFFFF; background-color: #404040;}
+#tcolobox-35 .tcolorbox-content{color: #000000; background-color: #F2F2F2; border: 1px solid #404040;}
+#tcolobox-35 div{ padding-top:8.5358px; padding-bottom:8.5358px; padding-left:14.22635px; padding-right:14.22635px; }
+#textcolor6{color:#FF0000}
+#tcolobox-36 .tcolorbox-title{color: #FFFFFF; background-color: #404040;}
+#tcolobox-36 .tcolorbox-content{color: #000000; background-color: #F2F2F2; border: 1px solid #404040;}
+#tcolobox-36 div{ padding-top:8.5358px; padding-bottom:8.5358px; padding-left:14.22635px; padding-right:14.22635px; }
+#tcolobox-37 .tcolorbox-title{color: #FFFFFF; background-color: #404040;}
+#tcolobox-37 .tcolorbox-content{color: #000000; background-color: #F2F2F2; border: 1px solid #404040;}
+#tcolobox-37 div{ padding-top:8.5358px; padding-bottom:8.5358px; padding-left:14.22635px; padding-right:14.22635px; }
+#tcolobox-38 .tcolorbox-title{color: #FFFFFF; background-color: #404040;}
+#tcolobox-38 .tcolorbox-content{color: #000000; background-color: #F2F2F2; border: 1px solid #404040;}
+#tcolobox-38 div{ padding-top:8.5358px; padding-bottom:8.5358px; padding-left:14.22635px; padding-right:14.22635px; }
+#tcolobox-39 .tcolorbox-title{color: #FFFFFF; background-color: #404040;}
+#tcolobox-39 .tcolorbox-content{color: #000000; background-color: #F2F2F2; border: 1px solid #404040;}
+#tcolobox-39 div{ padding-top:8.5358px; padding-bottom:8.5358px; padding-left:14.22635px; padding-right:14.22635px; }
+#tcolobox-40 .tcolorbox-title{color: #FFFFFF; background-color: #404040;}
+#tcolobox-40 .tcolorbox-content{color: #000000; background-color: #F2F2F2; border: 1px solid #404040;}
+#tcolobox-40 div{ padding-top:8.5358px; padding-bottom:8.5358px; padding-left:14.22635px; padding-right:14.22635px; }
+#tcolobox-41 .tcolorbox-title{color: #FFFFFF; background-color: #404040;}
+#tcolobox-41 .tcolorbox-content{color: #000000; background-color: #F2F2F2; border: 1px solid #404040;}
+#tcolobox-41 div{ padding-top:8.5358px; padding-bottom:8.5358px; padding-left:14.22635px; padding-right:14.22635px; }
+#tcolobox-42 .tcolorbox-title{color: #FFFFFF; background-color: #404040;}
+#tcolobox-42 .tcolorbox-content{color: #000000; background-color: #F2F2F2; border: 1px solid #404040;}
+#tcolobox-42 div{ padding-top:8.5358px; padding-bottom:8.5358px; padding-left:14.22635px; padding-right:14.22635px; }
+#tcolobox-43 .tcolorbox-title{color: #FFFFFF; background-color: #404040;}
+#tcolobox-43 .tcolorbox-content{color: #000000; background-color: #F2F2F2; border: 1px solid #404040;}
+#tcolobox-43 div{ padding-top:8.5358px; padding-bottom:8.5358px; padding-left:14.22635px; padding-right:14.22635px; }
+#textcolor7{color:#FF0000}
+#textcolor8{color:#FF0000}
+#textcolor9{color:#FF0000}
+#tcolobox-44 .tcolorbox-title{color: #FFFFFF; background-color: #404040;}
+#tcolobox-44 .tcolorbox-content{color: #000000; background-color: #F2F2F2; border: 1px solid #404040;}
+#tcolobox-44 div{ padding-top:8.5358px; padding-bottom:8.5358px; padding-left:14.22635px; padding-right:14.22635px; }
+#textcolor10{color:#FF0000}
+#textcolor11{color:#FF0000}
+#textcolor12{color:#FF0000}
+#textcolor13{color:#FF0000}
+#textcolor14{color:#FF0000}
+#tcolobox-45 .tcolorbox-title{color: #FFFFFF; background-color: #404040;}
+#tcolobox-45 .tcolorbox-content{color: #000000; background-color: #F2F2F2; border: 1px solid #404040;}
+#tcolobox-45 div{ padding-top:8.5358px; padding-bottom:8.5358px; padding-left:14.22635px; padding-right:14.22635px; }
+#tcolobox-46 .tcolorbox-title{color: #FFFFFF; background-color: #404040;}
+#tcolobox-46 .tcolorbox-content{color: #000000; background-color: #F2F2F2; border: 1px solid #404040;}
+#tcolobox-46 div{ padding-top:8.5358px; padding-bottom:8.5358px; padding-left:14.22635px; padding-right:14.22635px; }
+#textcolor15{color:#FFFFFF}
+#textcolor16{color:#FFFFFF}
+#textcolor17{color:#FFFFFF}
+#tcolobox-47 .tcolorbox-title{color: #FFFFFF; background-color: #404040;}
+#tcolobox-47 .tcolorbox-content{color: #000000; background-color: #F2F2F2; border: 1px solid #404040;}
+#tcolobox-47 div{ padding-top:8.5358px; padding-bottom:8.5358px; padding-left:14.22635px; padding-right:14.22635px; }
+#textcolor18{color:#FF0000}
+#textcolor19{color:#FF0000}
+#textcolor20{color:#FF0000}
+#tcolobox-48 .tcolorbox-title{color: #FFFFFF; background-color: #404040;}
+#tcolobox-48 .tcolorbox-content{color: #000000; background-color: #F2F2F2; border: 1px solid #404040;}
+#tcolobox-48 div{ padding-top:8.5358px; padding-bottom:8.5358px; padding-left:14.22635px; padding-right:14.22635px; }
+#tcolobox-49 .tcolorbox-title{color: #FFFFFF; background-color: #404040;}
+#tcolobox-49 .tcolorbox-content{color: #000000; background-color: #F2F2F2; border: 1px solid #404040;}
+#tcolobox-49 div{ padding-top:8.5358px; padding-bottom:8.5358px; padding-left:14.22635px; padding-right:14.22635px; }
+#tcolobox-50 .tcolorbox-title{color: #FFFFFF; background-color: #404040;}
+#tcolobox-50 .tcolorbox-content{color: #000000; background-color: #F2F2F2; border: 1px solid #404040;}
+#tcolobox-50 div{ padding-top:8.5358px; padding-bottom:8.5358px; padding-left:14.22635px; padding-right:14.22635px; }
+#tcolobox-51 .tcolorbox-title{color: #FFFFFF; background-color: #404040;}
+#tcolobox-51 .tcolorbox-content{color: #000000; background-color: #F2F2F2; border: 1px solid #404040;}
+#tcolobox-51 div{ padding-top:8.5358px; padding-bottom:8.5358px; padding-left:14.22635px; padding-right:14.22635px; }
+#textcolor21{color:#FF0000}
+#textcolor22{color:#FF0000}
+#textcolor23{color:#FF0000}
+#tcolobox-52 .tcolorbox-title{color: #FFFFFF; background-color: #404040;}
+#tcolobox-52 .tcolorbox-content{color: #000000; background-color: #F2F2F2; border: 1px solid #404040;}
+#tcolobox-52 div{ padding-top:8.5358px; padding-bottom:8.5358px; padding-left:14.22635px; padding-right:14.22635px; }
+#tcolobox-53 .tcolorbox-title{color: #FFFFFF; background-color: #404040;}
+#tcolobox-53 .tcolorbox-content{color: #000000; background-color: #F2F2F2; border: 1px solid #404040;}
+#tcolobox-53 div{ padding-top:8.5358px; padding-bottom:8.5358px; padding-left:14.22635px; padding-right:14.22635px; }
+#tcolobox-54 .tcolorbox-title{color: #FFFFFF; background-color: #404040;}
+#tcolobox-54 .tcolorbox-content{color: #000000; background-color: #F2F2F2; border: 1px solid #404040;}
+#tcolobox-54 div{ padding-top:8.5358px; padding-bottom:8.5358px; padding-left:14.22635px; padding-right:14.22635px; }
+#tcolobox-55 .tcolorbox-title{color: #FFFFFF; background-color: #404040;}
+#tcolobox-55 .tcolorbox-content{color: #000000; background-color: #F2F2F2; border: 1px solid #404040;}
+#tcolobox-55 div{ padding-top:8.5358px; padding-bottom:8.5358px; padding-left:14.22635px; padding-right:14.22635px; }
+#tcolobox-56 .tcolorbox-title{color: #FFFFFF; background-color: #404040;}
+#tcolobox-56 .tcolorbox-content{color: #000000; background-color: #F2F2F2; border: 1px solid #404040;}
+#tcolobox-56 div{ padding-top:8.5358px; padding-bottom:8.5358px; padding-left:14.22635px; padding-right:14.22635px; }
+#tcolobox-57 .tcolorbox-title{color: #FFFFFF; background-color: #404040;}
+#tcolobox-57 .tcolorbox-content{color: #000000; background-color: #F2F2F2; border: 1px solid #404040;}
+#tcolobox-57 div{ padding-top:8.5358px; padding-bottom:8.5358px; padding-left:14.22635px; padding-right:14.22635px; }
+#textcolor24{color:#FF0000}
+#textcolor25{color:#FF0000}
+#tcolobox-58 .tcolorbox-title{color: #FFFFFF; background-color: #404040;}
+#tcolobox-58 .tcolorbox-content{color: #000000; background-color: #F2F2F2; border: 1px solid #404040;}
+#tcolobox-58 div{ padding-top:8.5358px; padding-bottom:8.5358px; padding-left:14.22635px; padding-right:14.22635px; }
+#tcolobox-59 .tcolorbox-title{color: #FFFFFF; background-color: #404040;}
+#tcolobox-59 .tcolorbox-content{color: #000000; background-color: #F2F2F2; border: 1px solid #404040;}
+#tcolobox-59 div{ padding-top:8.5358px; padding-bottom:8.5358px; padding-left:14.22635px; padding-right:14.22635px; }
+#tcolobox-60 .tcolorbox-title{color: #FFFFFF; background-color: #404040;}
+#tcolobox-60 .tcolorbox-content{color: #000000; background-color: #F2F2F2; border: 1px solid #404040;}
+#tcolobox-60 div{ padding-top:8.5358px; padding-bottom:8.5358px; padding-left:14.22635px; padding-right:14.22635px; }
+#textcolor26{color:#FF0000}
+#tcolobox-61 .tcolorbox-title{color: #FFFFFF; background-color: #404040;}
+#tcolobox-61 .tcolorbox-content{color: #000000; background-color: #F2F2F2; border: 1px solid #404040;}
+#tcolobox-61 div{ padding-top:8.5358px; padding-bottom:8.5358px; padding-left:14.22635px; padding-right:14.22635px; }
+#tcolobox-62 .tcolorbox-title{color: #FFFFFF; background-color: #404040;}
+#tcolobox-62 .tcolorbox-content{color: #000000; background-color: #F2F2F2; border: 1px solid #404040;}
+#tcolobox-62 div{ padding-top:8.5358px; padding-bottom:8.5358px; padding-left:14.22635px; padding-right:14.22635px; }
+#textcolor27{color:#FF0000}
+#tcolobox-63 .tcolorbox-title{color: #FFFFFF; background-color: #404040;}
+#tcolobox-63 .tcolorbox-content{color: #000000; background-color: #F2F2F2; border: 1px solid #404040;}
+#tcolobox-63 div{ padding-top:8.5358px; padding-bottom:8.5358px; padding-left:14.22635px; padding-right:14.22635px; }
+#textcolor28{color:#FF0000}
+#textcolor29{color:#FF0000}
+#tcolobox-64 .tcolorbox-title{color: #FFFFFF; background-color: #404040;}
+#tcolobox-64 .tcolorbox-content{color: #000000; background-color: #F2F2F2; border: 1px solid #404040;}
+#tcolobox-64 div{ padding-top:8.5358px; padding-bottom:8.5358px; padding-left:14.22635px; padding-right:14.22635px; }
+#textcolor30{color:#FF0000}
+#textcolor31{color:#FF0000}
+#tcolobox-65 .tcolorbox-title{color: #FFFFFF; background-color: #404040;}
+#tcolobox-65 .tcolorbox-content{color: #000000; background-color: #F2F2F2; border: 1px solid #404040;}
+#tcolobox-65 div{ padding-top:8.5358px; padding-bottom:8.5358px; padding-left:14.22635px; padding-right:14.22635px; }
+#textcolor32{color:#FF0000}
+#tcolobox-66 .tcolorbox-title{color: #FFFFFF; background-color: #404040;}
+#tcolobox-66 .tcolorbox-content{color: #000000; background-color: #F2F2F2; border: 1px solid #404040;}
+#tcolobox-66 div{ padding-top:8.5358px; padding-bottom:8.5358px; padding-left:14.22635px; padding-right:14.22635px; }
+#textcolor33{color:#FF0000}
+#textcolor34{color:#FF0000}
 /* end css.sty */
 
