deploy: e75e404c9656595dfc9d9fb8932f2ba333965d2f

--- a/00-main.css
+++ b/00-main.css
@@ -515,5 +515,9 @@ img { max-width: 100%; height: auto; }
 #tcolobox-74 .tcolorbox-title{color: #FFFFFF; background-color: #404040;}
 #tcolobox-74 .tcolorbox-content{color: #000000; background-color: #F2F2F2; border: 1px solid #404040;}
 #tcolobox-74 div{ padding-top:8.5358px; padding-bottom:8.5358px; padding-left:14.22635px; padding-right:14.22635px; }
+#textcolor56{color:#FF0000}
+#tcolobox-75 .tcolorbox-title{color: #FFFFFF; background-color: #404040;}
+#tcolobox-75 .tcolorbox-content{color: #000000; background-color: #F2F2F2; border: 1px solid #404040;}
+#tcolobox-75 div{ padding-top:8.5358px; padding-bottom:8.5358px; padding-left:14.22635px; padding-right:14.22635px; }
 /* end css.sty */
 
