deploy: 94a4f0f3154fd69475697548fc068749fd007bc1

--- a/00-main.css
+++ b/00-main.css
@@ -532,5 +532,6 @@ img { max-width: 100%; height: auto; }
 #adjustbox-2{border: 0.04.95em solid black;padding: 0.3.95em;}
 #textcolor62{color:#FF8000}
 #textcolor63{color:#00FF00}
+#textcolor64{color:#FF0000}
 /* end css.sty */
 
