deploy: 9e0c1ce259fdfce2d5e4c621ac7b999f9560a99a

--- a/00-main.css
+++ b/00-main.css
@@ -715,5 +715,20 @@ img { max-width: 100%; height: auto; }
 #textcolor152{color:#FF0000}
 #textcolor153{color:#FF0000}
 #textcolor154{color:#FF0000}
+#textcolor155{color:#FF0000}
+#textcolor156{color:#FF0000}
+#textcolor157{color:#FF0000}
+#textcolor158{color:#FF0000}
+#textcolor159{color:#FF0000}
+#textcolor160{color:#FF0000}
+#textcolor161{color:#FF0000}
+#textcolor161{color:#0000FF}
+#textcolor162{color:#FF0000}
+#textcolor163{color:#FF0000}
+#textcolor164{color:#FF0000}
+#tcolobox-98 .tcolorbox-title{color: #FFFFFF; background-color: #404040;}
+#tcolobox-98 .tcolorbox-content{color: #000000; background-color: #F2F2F2; border: 1px solid #404040;}
+#tcolobox-98 div{ padding-top:8.5358px; padding-bottom:8.5358px; padding-left:14.22635px; padding-right:14.22635px; }
+#textcolor165{color:#FF0000}
 /* end css.sty */
 
